# bumper_gl

./: .gitignore  AABB.h  Buffer.h  Bumper.h  CMakeLists.txt  Camera.h  Diagnose.h  Mesh.h  Model.h  Program.h  README  Shader.h  Texture.h  main.cpp  stb.cpp
glad/: README.md
resources/models/: Bumper.fbx  duck.mtl
resources/shaders/: default.fs  default.vs  floor.fs  floor.vs  model.fs  model.vs  sky_box.fs  sky_box.vs
